avro_derive/tests/ui/avro_rs_373_variant_rename.stderr
warning: `#[avro(rename = "..")]` is deprecated
 --> tests/ui/avro_rs_373_variant_rename.rs:6:5
  |
6 | /     #[avro(rename = "Scam")]
7 | |     Spam,
  | |________^
  |
  = help: Use `#[serde(rename = "..")]` instead

error: `#[avro(rename = "..")]` must match `#[serde(rename = "..")]`, it's also deprecated. Please use only `#[serde(rename  = "..")]`
 --> tests/ui/avro_rs_373_variant_rename.rs:6:5
  |
6 | /     #[avro(rename = "Scam")]
7 | |     Spam,
  | |________^
