avro_derive/tests/ui/avro_rs_373_variant_rename.rs
use apache_avro::AvroSchema;

#[derive(AvroSchema)]
enum Foo {
    Bar,
    #[avro(rename = "Scam")]
    Spam,
}

pub fn main() {}
